--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Vidaloka" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico" rel="stylesheet">
   <script src="https://use.fontawesome.com/2fe81c84d0.js"></script>
 </head>
 <body>
